# shennandadao

./: README.md.txt
0528ndk/app/: build.gradle
0528ndk/app/src/main/: AndroidManifest.xml
AspectJx/: build.gradle  gradle.properties  settings.gradle
AspectJx/app/: build.gradle
AspectJx/app/src/main/: AndroidManifest.xml
AspectJx/gradle/wrapper/: gradle-wrapper.properties
CameraMaster-master/app/: build.gradle
IdleHandler2/app/: build.gradle
IdleHandler2/app/src/main/: AndroidManifest.xml
IdleHandler2/gradle/wrapper/: gradle-wrapper.properties
MyKotlinDemo/app/: build.gradle
MyKotlinDemo/app/src/main/: AndroidManifest.xml
NdkTongue/app/: build.gradle
NdkTongue/app/src/main/: AndroidManifest.xml
NdkTongue/app/src/main/cpp/tongue_detect/: CMakeLists.txt
NdkTongue/app/src/main/cpp/tongue_detect/src/: android_native.cpp  android_native.h
NdkTongue/app/src/main/cpp/tongue_detect/src/models/: tongue_5classes_singlechannel.param
NdkTongue/app/src/main/cpp/tongue_detect/src/tongue/: tongue.cpp  tongue.h
SlideNavigation-master/: README.md  build.gradle  config.gradle  settings.gradle
SlideNavigation-master/demo/: build.gradle
SlideNavigation-master/demo/src/main/: AndroidManifest.xml
SlideNavigation-master/gradle/wrapper/: gradle-wrapper.properties
SlideNavigation-master/slide_navigation/: build.gradle
SlideNavigation-master/slide_navigation/src/main/: AndroidManifest.xml
YuedongPlugin/: settings.gradle
YuedongPlugin/app/: build.gradle
YuedongPlugin/app/src/main/: AndroidManifest.xml
YuedongPlugin/pluginApp/: build.gradle
aicoach/app/: build.gradle
aicoach/app/src/main/: AndroidManifest.xml
camera2-master/: build.gradle
camera2-master/src/main/: AndroidManifest.xml
chajianhua/app/: build.gradle
chajianhua/app/src/main/: AndroidManifest.xml
constractLayout/app/: build.gradle
coordinator/app/: build.gradle
flutterProjects/demo1/flutter_app/: pubspec.yaml
flutterProjects/demo2/flutter_app2/: README.md  pubspec.yaml
flutterProjects/demo3/flutter_app3/: README.md  pubspec.yaml
flutterProjects/list_demo/flutter_app_list/: .metadata  README.md  pubspec.yaml
fragmentViewpage/app/: build.gradle
glides/: build.gradle
glides/app/: build.gradle
glides/gradle/wrapper/: gradle-wrapper.properties
greenDao/: greenDao使用.xmind
greenDao/greenDAODemo-master/: README.md  build.gradle
greenDao/greenDAODemo-master/app/: build.gradle  proguard-rules.pro
ijkplayer/: build.gradle
ijkplayer/gradle/wrapper/: gradle-wrapper.properties
ijkplayer/ijkplayer-example/: build.gradle
jetpackTest/: gradle.properties
jetpackTest/app/: build.gradle
jetpackTest/gradle/wrapper/: gradle-wrapper.properties
leakCanary/app/: build.gradle
profierMat/app/: build.gradle
profierMat/gradle/wrapper/: gradle-wrapper.properties
profiler/app/: build.gradle
recycle_test/: build.gradle
recycle_test/app/: build.gradle
recycleviewTest/app/: build.gradle
scrollListview/app/: build.gradle
tablayout/app/: build.gradle
testnaviget/app/: build.gradle
(+309 files in other folders)
